--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,13 @@
 * { 
-	text-align: center; 
-	width: 300px;
+    text-align: center; 
+    width: 300px;
 }
 
 body { background-color: grey; }
 
 select, input { 
-	width: 100%; 
-	padding: 5px;
+    width: 100%; 
+    padding: 5px;
 }
+
+a {text-align: right;}
