--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,4 +10,15 @@ select, input {
     padding: 5px;
 }
 
-a {text-align: right;}
+a.button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 36;
+    text-decoration: none;
+    color: initial;
+}
+
+select.course { display: none};
